Prevent Object Labels from wrapping

--- a/src/devtools/packages/devtools-reps/object-inspector/components/ObjectInspector.css
+++ b/src/devtools/packages/devtools-reps/object-inspector/components/ObjectInspector.css
@@ -10,6 +10,7 @@
 .tree.object-inspector .object-label,
 .tree.object-inspector .object-label * {
   color: var(--theme-highlight-blue);
+  flex-shrink: 0;
 }
 
 .tree.object-inspector .node .unavailable {
